Improved fog falloff

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -18,8 +18,6 @@ beacon.beam.depth=true
 separateAo=true
 
 frustum.culling=true
-
-
 shadow.culling=true
 
 shadowTerrain=true
@@ -35,21 +33,15 @@ particles.before.deferred=true
 # texture.noise = /tex/noise/LDR_RGBA_0.png
 texture.noise = /tex/noise/combined.png
 
+texture.gbuffers.shadowcolor0=minecraft:dynamic/lightmap_1
+texture.deferred.shadowcolor0=minecraft:dynamic/lightmap_1
+texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOAT
+# texture.composite.shadowcolor1=/LUTs/lut.png
 
-# albedo:   0
-# normal:   1
-# lightmap: 2
-# masks:    4
-# generic:  5
-# generic2: 6
-# generic3: 7
-
-blend.gbuffers_clouds = SRC_ALPHA ONE_MINUS_SRC_ALPHA SRC_ALPHA ONE_MINUS_SRC_ALPHA
+# blend.gbuffers_clouds = SRC_ALPHA ONE_MINUS_SRC_ALPHA SRC_ALPHA ONE_MINUS_SRC_ALPHA
+# blend.gbuffers_clouds = ONE ZERO ONE ZERO
 blend.gbuffers_armor_glint = ONE ONE ONE ONE
-
-
-
-# blend.gbuffers_water=ONE ZERO ONE ZERO
+# blend.gbuffers_water=SRC_ALPHA ONE_MINUS_SRC_ALPHA SRC_ALPHA ONE_MINUS_SRC_ALPHA
 # blend.gbuffers_water.texture=off
 # blend.gbuffers_water.lightmap=off
 # blend.gbuffers_water.normals=ONE ZERO ONE ZERO
@@ -71,14 +63,37 @@ blend.gbuffers_armor_glint = ONE ONE ONE ONE
 blend.composite.colortex6=off
 blend.composite.colortex7=off
 
-texture.gbuffers.shadowcolor0=minecraft:dynamic/lightmap_1
-texture.deferred.shadowcolor0=minecraft:dynamic/lightmap_1
-texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOAT
-# texture.composite.shadowcolor1=/LUTs/lut.png
-
 
 
 uniform.float.invisibility=clamp(smooth(if(is_invisible, 1, -0.1), 0.5, 2), 0, 1)
+
+
+screen = <profile> STREAMER_MODE <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED]
+
+screen.POST_PROCESSING = CONTRAST EXPOSURE POST_SATURATION <empty> [TONEMAPPING] <empty> <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
+screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance shadowMapResolution SHADOW_DISTORTION <empty> <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES
+screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] VANILLA_LIGHTING CUTOUT_ALIGN_STRENGTH <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> SUN_TEMP TORCH_TEMP
+    screen.SSAO_BETA = AO_MODE AO_INTENSITY
+    screen.SSAO = AO_MODE AO_INTENSITY AO_RADIUS <empty> <empty> <empty> AO_SAMPLES TEMPORAL_UPDATE_SPEED_AO
+    screen.LIGHT_STRENGTH = DYNAMIC_EXPOSURE_LIGHTING <empty> SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
+screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTING <empty> <empty> SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS <empty> <empty> POST_TEMP VANILLA_COLORS
+    screen.TONEMAPPING = USE_LUT USER_LMT_MODE USER_OUTPUT_COLORSPACE USER_GAMMA_CORRECT
+        screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION NIGHT_EFFECT_AFTER_EXPOSURE
+screen.MISC = STREAMER_MODE BRIGHT_NETHER INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS <empty> <empty> WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER
+    screen.RESOURCEPACK = TEX_RES TEX_RENDER
+screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE <empty> <empty> <empty> SHADOW_TRANSITION_MIXING <empty> <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED]
+    screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP PIXELATED_SHADOWS
+        screen.FORCED_PERSPECTIVE = FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
+    screen.AUTO_ADDED = *
+sliders = CONTRAST EXPOSURE POST_SATURATION EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT_USER AMBIENT_LIGHT_MULT_USER SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER PIXELATED_SHADOWS shadowDistance shadowMapResolution SHADOW_DISTORTION SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES SUN_TEMP TORCH_TEMP ATMOSPHERIC_FOG_DENSITY SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS POST_TEMP VANILLA_COLORS NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION COLORS_SATURATION COLORS_CONTRAST COLORS_CONTRAST_BRIGHT_BIAS COLORS_SATURATION_WEIGHTS_RED COLORS_SATURATION_WEIGHTS_GREEN COLORS_SATURATION_WEIGHTS_BLUE WIND_STRENGTH_CONSTANT_USER TEX_RES ISOLATE_RENDER_STAGE FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
+
+profile.ONE = STREAMER_MODE:1 VANILLA_LIGHTING:1 CUTOUT_ALIGN_STRENGTH:1.0 SKY_COLOR_BLEND:0.3 STAR_WEIGHTS:1.00 SKY_SATURATION:1.13 SKY_BRIGHTNESS_USER:1.4 !USE_LUT USE_ACES USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:3 USER_GAMMA_CORRECT !USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.001 !SHADOWS_ENABLED_USER EXPOSURE:1.0 CONTRAST:0.0 POST_SATURATION:1.0 DITHERING_MODE:1 !INVISIBILITY_DISTORTION WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 !BRIGHT_NETHER
+profile.TWO = profile.ONE VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.6 STAR_WEIGHTS:1.5 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 USE_LUT USE_ACES USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:4 USER_GAMMA_CORRECT !USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.6 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 !SHADOWS_ENABLED_USER WIND_STRENGTH_CONSTANT_USER:0.5
+profile.THREE = profile.TWO VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.8 STAR_WEIGHTS:1.75 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 USE_LUT USE_ACES USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:4 USER_GAMMA_CORRECT USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.6 AO_RADIUS:1.2 TEMPORAL_UPDATE_SPEED_AO:0.0026 AO_SAMPLES:9 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 SHADOWS_ENABLED_USER PIXELATED_SHADOWS:0 shadowMapResolution:4096 shadowDistance:200.0 SHADOW_FILTERING:1
+
+# profile.CONTENT = STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_DENSITY:0.00075 EXPOSURE:0.9 CONTRAST:0.2 POST_SATURATION:1.1 DITHERING_MODE:0 WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 BRIGHT_NETHER
+profile.CONTENT_TWO = profile.TWO STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_DENSITY:0.00075 EXPOSURE:0.9 CONTRAST:0.2 POST_SATURATION:1.1 DITHERING_MODE:0 WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 BRIGHT_NETHER
+profile.CONTENT_THREE = profile.THREE STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_DENSITY:0.00075 EXPOSURE:0.9 CONTRAST:0.2 POST_SATURATION:1.1 DITHERING_MODE:0 WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 BRIGHT_NETHER
 
 
 
@@ -155,31 +170,3 @@ flip.final.colortex5=false
 flip.final.colortex6=false
 flip.final.colortex7=false
 program.final.enabled=true
-
-
-screen = <profile> STREAMER_MODE <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED]
-
-screen.POST_PROCESSING = CONTRAST EXPOSURE POST_SATURATION <empty> [TONEMAPPING] <empty> <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
-screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance shadowMapResolution SHADOW_DISTORTION <empty> <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES
-screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] VANILLA_LIGHTING CUTOUT_ALIGN_STRENGTH <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> SUN_TEMP TORCH_TEMP
-    screen.SSAO_BETA = AO_MODE AO_INTENSITY
-    screen.SSAO = AO_MODE AO_INTENSITY AO_RADIUS <empty> <empty> <empty> AO_SAMPLES TEMPORAL_UPDATE_SPEED_AO
-    screen.LIGHT_STRENGTH = DYNAMIC_EXPOSURE_LIGHTING <empty> SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
-screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTING <empty> <empty> SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS <empty> <empty> POST_TEMP VANILLA_COLORS
-    screen.TONEMAPPING = USE_LUT USER_LMT_MODE USER_OUTPUT_COLORSPACE USER_GAMMA_CORRECT
-        screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION NIGHT_EFFECT_AFTER_EXPOSURE
-screen.MISC = STREAMER_MODE BRIGHT_NETHER INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS <empty> <empty> WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER
-    screen.RESOURCEPACK = TEX_RES TEX_RENDER
-screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE <empty> <empty> <empty> SHADOW_TRANSITION_MIXING <empty> <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED]
-    screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP PIXELATED_SHADOWS
-        screen.FORCED_PERSPECTIVE = FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
-    screen.AUTO_ADDED = *
-sliders = CONTRAST EXPOSURE POST_SATURATION EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT_USER AMBIENT_LIGHT_MULT_USER SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER PIXELATED_SHADOWS shadowDistance shadowMapResolution SHADOW_DISTORTION SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES SUN_TEMP TORCH_TEMP ATMOSPHERIC_FOG_DENSITY SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS POST_TEMP VANILLA_COLORS NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION COLORS_SATURATION COLORS_CONTRAST COLORS_CONTRAST_BRIGHT_BIAS COLORS_SATURATION_WEIGHTS_RED COLORS_SATURATION_WEIGHTS_GREEN COLORS_SATURATION_WEIGHTS_BLUE WIND_STRENGTH_CONSTANT_USER TEX_RES ISOLATE_RENDER_STAGE FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
-
-profile.ONE = STREAMER_MODE:1 VANILLA_LIGHTING:1 CUTOUT_ALIGN_STRENGTH:1.0 SKY_COLOR_BLEND:0.3 STAR_WEIGHTS:1.00 SKY_SATURATION:1.13 SKY_BRIGHTNESS_USER:1.4 !USE_LUT USE_ACES USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:3 USER_GAMMA_CORRECT !USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.001 !SHADOWS_ENABLED_USER EXPOSURE:1.0 CONTRAST:0.0 POST_SATURATION:1.0 DITHERING_MODE:1 !INVISIBILITY_DISTORTION WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 !BRIGHT_NETHER
-profile.TWO = profile.ONE VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.6 STAR_WEIGHTS:1.5 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 USE_LUT USE_ACES USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:4 USER_GAMMA_CORRECT !USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.6 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 !SHADOWS_ENABLED_USER WIND_STRENGTH_CONSTANT_USER:0.5
-profile.THREE = profile.TWO VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COLOR_BLEND:0.8 STAR_WEIGHTS:1.75 SKY_SATURATION:1.0 SKY_BRIGHTNESS_USER:1.0 USE_LUT USE_ACES USER_OUTPUT_COLORSPACE:0 USER_LMT_MODE:4 USER_GAMMA_CORRECT USE_NIGHT_EFFECT AO_MODE:1 AO_INTENSITY:1.6 AO_RADIUS:1.2 TEMPORAL_UPDATE_SPEED_AO:0.0026 AO_SAMPLES:9 ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY:0.0015 SHADOWS_ENABLED_USER PIXELATED_SHADOWS:0 shadowMapResolution:4096 shadowDistance:200.0 SHADOW_FILTERING:1
-
-# profile.CONTENT = STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_DENSITY:0.00075 EXPOSURE:0.9 CONTRAST:0.2 POST_SATURATION:1.1 DITHERING_MODE:0 WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 BRIGHT_NETHER
-profile.CONTENT_TWO = profile.TWO STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_DENSITY:0.00075 EXPOSURE:0.9 CONTRAST:0.2 POST_SATURATION:1.1 DITHERING_MODE:0 WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 BRIGHT_NETHER
-profile.CONTENT_THREE = profile.THREE STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_DENSITY:0.00075 EXPOSURE:0.9 CONTRAST:0.2 POST_SATURATION:1.1 DITHERING_MODE:0 WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 BRIGHT_NETHER
