Added virtual horizon

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -28,6 +28,9 @@ shadowBlockEntities=true
 particles.before.deferred=true
 
 
+alphaTest.gbuffers_skytextured=LEQUAL 0.001
+
+
 # TODO: add custom overlay
 # underwaterOverlay=false
 # texture.noise = /tex/noise/LDR_RGBA_0.png
