--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -7,14 +7,13 @@ block.1 = crimson_fungus twisting_vines_plant twisting_vines warped_fungus cobwe
 block.2 = weeping_vines_plant weeping_vines hanging_roots cave_vines:berries=false cave_vines_plant:berries=false spore_blossom
 
 # light-emitting blocks referenced from https://minecraft.fandom.com/wiki/Light
-# last entries separated by two spaces don't usually emit light
-block.3 = beacon conduit:waterlogged=true end_gateway end_portal fire glowstone lava flowing_lava pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor:charges=4,3,2,1 sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_fire soul_lantern ender_chest glow_lichen amethyst_cluster:facing=north,south,east,west large_amethyst_bud:facing=north,south,east,west medium_amethyst_bud:facing=north,south,east,west small_amethyst_bud:facing=north,south,east,west brewing_stand dragon_egg end_portal_frame:eye=true  amethyst_block budding_amethyst
+block.3 = beacon conduit:waterlogged=true end_gateway end_portal fire glowstone lava flowing_lava pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor:charges=4,3,2,1 sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_fire soul_lantern ender_chest glow_lichen amethyst_cluster:facing=north,south,east,west large_amethyst_bud:facing=north,south,east,west medium_amethyst_bud:facing=north,south,east,west small_amethyst_bud:facing=north,south,east,west brewing_stand dragon_egg end_portal_frame:eye=true
 
 # up-facing glowing
 block.4 = brown_mushroom amethyst_cluster:facing=up large_amethyst_bud:facing=up medium_amethyst_bud:facing=up small_amethyst_bud:facing=up redstone_wire:power=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
 
 # down-facing glowing
-block.5 = amethyst_cluster:facing=down large_amethyst_bud:facing=down medium_amethyst_bud:facing=down small_amethyst_bud:facing=down;
+block.5 = amethyst_cluster:facing=down large_amethyst_bud:facing=down medium_amethyst_bud:facing=down small_amethyst_bud:facing=down
 
 # partially light-emitting blocks
 # last entries separated by two spaces don't usually emit light
@@ -46,3 +45,6 @@ block.13 = sunflower:half=upper
 
 # stiff wavy stuff (that is not a cutout)
 block.15 = oak_leaves spruce_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves mangrove_leaves azalea_leaves flowering_azalea_leaves
+
+# water
+block.16 = water flowing_water
