--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -63,8 +63,8 @@ blend.gbuffers_armor_glint = ONE ONE ONE ONE
 # blend.composite.colortex3=
 # blend.composite.colortex4=
 # blend.composite.colortex5=
-blend.composite.colortex6=off
-blend.composite.colortex7=off
+# blend.composite.colortex6=
+# blend.composite.colortex7=
 
 
 
@@ -103,25 +103,8 @@ profile.CONTENT_THREE = profile.THREE STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 A
 program.shadow.enabled=SHADOWS_ENABLED
 
 # shadowcomp doesn't exist intentionally, it acts as shadowcomp_pre since that program isn't provided by optifine
-flip.deferred.colortex0=false
 flip.shadowcomp1.colortex1=true
-flip.deferred.colortex2=false
-flip.deferred.colortex3=false
-flip.deferred.colortex4=false
-flip.deferred.colortex5=false
-flip.deferred.colortex6=false
-flip.deferred.colortex7=false
 program.shadowcomp.enabled=SHADOWS_ENABLED
-
-flip.deferred.colortex0=false
-flip.shadowcomp1.colortex1=true
-flip.deferred.colortex2=false
-flip.deferred.colortex3=false
-flip.deferred.colortex4=false
-flip.deferred.colortex5=false
-flip.deferred.colortex6=false
-flip.deferred.colortex7=false
-program.shadowcomp1.enabled=SHADOWS_ENABLED
 
 flip.deferred.colortex0=false
 flip.deferred.colortex1=true
@@ -142,7 +125,6 @@ flip.deferred1.colortex5=false
 flip.deferred1.colortex6=false
 flip.deferred1.colortex7=false
 program.deferred1.enabled=true
-
 
 flip.composite.colortex0=true
 flip.composite.colortex1=false
