Fixed water fog transparency bug, prepare for TAA

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -99,21 +99,17 @@ profile.CONTENT_TWO = profile.TWO STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 AO_IN
 profile.CONTENT_THREE = profile.THREE STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_DENSITY:0.00075 EXPOSURE:0.9 CONTRAST:0.2 POST_SATURATION:1.1 DITHERING_MODE:0 WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 BRIGHT_NETHER
 
 
-
-program.shadow.enabled=SHADOWS_ENABLED
+program.shadow.enabled=SHADOWS_ENABLED_USER
 
 # shadowcomp doesn't exist intentionally, it acts as shadowcomp_pre since that program isn't provided by optifine
 flip.shadowcomp1.colortex1=true
-program.shadowcomp.enabled=SHADOWS_ENABLED
+program.shadowcomp.enabled=SHADOWS_ENABLED_USER
 
 flip.deferred.colortex0=false
 flip.deferred.colortex1=true
 flip.deferred.colortex2=false
 flip.deferred.colortex3=false
 flip.deferred.colortex4=false
-flip.deferred.colortex5=false
-flip.deferred.colortex6=false
-flip.deferred.colortex7=false
 program.deferred.enabled=true
 
 flip.deferred1.colortex0=true
@@ -121,9 +117,6 @@ flip.deferred1.colortex1=true
 flip.deferred1.colortex2=false
 flip.deferred1.colortex3=false
 flip.deferred1.colortex4=false
-flip.deferred1.colortex5=false
-flip.deferred1.colortex6=false
-flip.deferred1.colortex7=false
 program.deferred1.enabled=true
 
 flip.composite.colortex0=true
@@ -131,19 +124,13 @@ flip.composite.colortex1=false
 flip.composite.colortex2=false
 flip.composite.colortex3=false
 flip.composite.colortex4=false
-flip.composite.colortex5=false
-flip.composite.colortex6=false
-flip.composite.colortex7=false
-program.composite.enabled=SHADOWS_ENABLED
+program.composite.enabled=SHADOWS_ENABLED_USER
 
 flip.composite1.colortex0=true
 flip.composite1.colortex1=false
 flip.composite1.colortex2=false
 flip.composite1.colortex3=false
-flip.composite1.colortex4=false
-flip.composite1.colortex5=false
-flip.composite1.colortex6=false
-flip.composite1.colortex7=false
+flip.composite1.colortex4=true
 program.composite1.enabled=true
 
 flip.final.colortex0=true
@@ -151,7 +138,4 @@ flip.final.colortex1=false
 flip.final.colortex2=false
 flip.final.colortex3=false
 flip.final.colortex4=false
-flip.final.colortex5=false
-flip.final.colortex6=false
-flip.final.colortex7=false
 program.final.enabled=true
