--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -81,7 +81,7 @@ screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] VANILLA_LIGHTING CUTOUT_ALIGN_STR
     screen.LIGHT_STRENGTH = DYNAMIC_EXPOSURE_LIGHTING <empty> SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
 screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTING <empty> <empty> SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS <empty> <empty> POST_TEMP VANILLA_COLORS
     screen.TONEMAPPING = USE_LUT USER_LMT_MODE USER_OUTPUT_COLORSPACE USER_GAMMA_CORRECT
-        screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION NIGHT_EFFECT_AFTER_EXPOSURE
+        screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
 screen.MISC = STREAMER_MODE BRIGHT_NETHER INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA <empty> <empty> <empty> WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER
     screen.RESOURCEPACK = TEX_RES TEX_RENDER
 screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE <empty> <empty> <empty> SHADOW_TRANSITION_MIXING <empty> <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED]
