--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -103,5 +103,7 @@ program.shadow.enabled=SHADOWS_ENABLED_USER
 
 # shadowcomp doesn't exist intentionally, it acts as shadowcomp_pre since that program isn't provided by optifine
 flip.shadowcomp1.colortex1=true
-program.shadowcomp.enabled=SHADOWS_ENABLED_USER
-program.composite.enabled=SHADOWS_ENABLED_USER
+
+flip.deferred.colortex0=false
+# program.shadowcomp.enabled=SHADOWS_ENABLED_USER
+# program.composite.enabled=SHADOWS_ENABLED_USER
