--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -105,5 +105,5 @@ program.shadow.enabled=SHADOWS_ENABLED_USER
 flip.shadowcomp1.colortex1=true
 
 flip.deferred.colortex0=false
-# program.shadowcomp.enabled=SHADOWS_ENABLED_USER
-# program.composite.enabled=SHADOWS_ENABLED_USER
+program.shadowcomp.enabled=SHADOWS_ENABLED_USER
+program.composite.enabled=SHADOWS_ENABLED_USER
