Added twilight forest block properties

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -7,7 +7,7 @@ block.1 = crimson_fungus twisting_vines_plant twisting_vines warped_fungus cobwe
 block.2 = weeping_vines_plant weeping_vines hanging_roots cave_vines:berries=false cave_vines_plant:berries=false spore_blossom
 
 # light-emitting blocks referenced from https://minecraft.fandom.com/wiki/Light
-block.3 = beacon conduit:waterlogged=true end_gateway end_portal fire glowstone pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor:charges=4,3,2,1 sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_fire soul_lantern ender_chest glow_lichen amethyst_cluster:facing=north,south,east,west large_amethyst_bud:facing=north,south,east,west medium_amethyst_bud:facing=north,south,east,west small_amethyst_bud:facing=north,south,east,west brewing_stand dragon_egg end_portal_frame:eye=true
+block.3 = beacon conduit:waterlogged=true end_gateway end_portal fire glowstone pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor:charges=4,3,2,1 sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_fire soul_lantern ender_chest glow_lichen amethyst_cluster:facing=north,south,east,west large_amethyst_bud:facing=north,south,east,west medium_amethyst_bud:facing=north,south,east,west small_amethyst_bud:facing=north,south,east,west brewing_stand dragon_egg end_portal_frame:eye=true twilightforest:firefly twilightforest:moonworm
 
 # up-facing glowing
 block.4 = brown_mushroom amethyst_cluster:facing=up large_amethyst_bud:facing=up medium_amethyst_bud:facing=up small_amethyst_bud:facing=up redstone_wire:power=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
@@ -23,28 +23,28 @@ block.6 = lava_cauldron campfire:lit=true jack_o_lantern torch wall_torch blast_
 # block.7 = 
 
 # exception: partially-lit down-facing cutouts
-block.8 = cave_vines:berries=true cave_vines_plant:berries=true
+block.8 = cave_vines:berries=true cave_vines_plant:berries=true twilightforest:torchberry_plant:has_torchberries=true
 
 # little *s that don't want to cooperate with the lightmap
 block.9 = magma_block sculk_sensor:sculk_sensor_phase=active
 
 # wavy stuff (that is also a diagonal up-facing cutout)
-block.10 = blue_orchid fern sweet_berry_bush grass warped_roots nether_sprouts large_fern:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower
+block.10 = blue_orchid fern sweet_berry_bush grass warped_roots nether_sprouts large_fern:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower twilightforest:fiddlehead twilightforest:thorn_rose
 
 # two-tall wavy stuff (upper part only) (that is also a diagonal up-facing cutout)
 block.11 = large_fern:half=upper lilac:half=upper rose_bush:half=upper peony:half=upper tall_grass:half=upper
 
 # stiff wavy stuff (that is also a diagonal up-facing cutout)
-block.12 = dandelion poppy allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower lily_of_the_valley wither_rose tube_coral brain_coral bubble_coral fire_coral horn_coral oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling wheat crimson_roots sunflower:half=lower
+block.12 = dandelion poppy allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower lily_of_the_valley wither_rose tube_coral brain_coral bubble_coral fire_coral horn_coral oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling wheat crimson_roots sunflower:half=lower twilightforest:mayapple twilightforest:twilight_oak_sapling twilightforest:canopy_sapling twilightforest:mangrove_sapling twilightforest:darkwood_sapling twilightforest:hollow_oak_sapling twilightforest:time_sapling twilightforest:transformation_sapling twilightforest:mining_sapling twilightforest:sorting_sapling twilightforest:rainbow_oak_sapling
 
 # stiff two-tall stuff (that is also a diagonal up-facing cutout)
 block.13 = sunflower:half=upper
 
 # wavy stuff (that is not a cutout)
-# block.14 = 
+block.14 = twilightforest:giant_leaves
 
 # stiff wavy stuff (that is not a cutout)
-block.15 = oak_leaves spruce_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves mangrove_leaves azalea_leaves flowering_azalea_leaves
+block.15 = oak_leaves spruce_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves mangrove_leaves azalea_leaves flowering_azalea_leaves twilightforest:beanstalk_leaves twilightforest:thorn_leaves twilightforest:twilight_oak_leaves twilightforest:canopy_leaves twilightforest:mangrove_leaves twilightforest:time_leaves twilightforest:transformation_leaves twilightforest:mining_leaves twilightforest:sorting_leaves twilightforest:rainbow_oak_leaves
 
 # water
 block.16 = water flowing_water
