Fixed entity/particle transparency

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -25,7 +25,7 @@ shadowTransluscent=true
 shadowEntities=true
 shadowBlockEntities=true
 
-particles.before.deferred=true
+particles.before.deferred=false
 
 
 alphaTest.gbuffers_skytextured=LEQUAL 0.001
