Lily of the valley no longer stiff

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -29,13 +29,13 @@ block.8 = cave_vines:berries=true cave_vines_plant:berries=true twilightforest:t
 block.9 = magma_block sculk_sensor:sculk_sensor_phase=active
 
 # wavy stuff (that is also a diagonal up-facing cutout)
-block.10 = blue_orchid fern sweet_berry_bush grass warped_roots nether_sprouts large_fern:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower twilightforest:fiddlehead twilightforest:thorn_rose
+block.10 = blue_orchid fern sweet_berry_bush grass warped_roots nether_sprouts lily_of_the_valley large_fern:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower twilightforest:fiddlehead twilightforest:thorn_rose
 
 # two-tall wavy stuff (upper part only) (that is also a diagonal up-facing cutout)
 block.11 = large_fern:half=upper lilac:half=upper rose_bush:half=upper peony:half=upper tall_grass:half=upper
 
 # stiff wavy stuff (that is also a diagonal up-facing cutout)
-block.12 = dandelion poppy allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower lily_of_the_valley wither_rose tube_coral brain_coral bubble_coral fire_coral horn_coral oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling wheat crimson_roots sunflower:half=lower twilightforest:mayapple twilightforest:twilight_oak_sapling twilightforest:canopy_sapling twilightforest:mangrove_sapling twilightforest:darkwood_sapling twilightforest:hollow_oak_sapling twilightforest:time_sapling twilightforest:transformation_sapling twilightforest:mining_sapling twilightforest:sorting_sapling twilightforest:rainbow_oak_sapling
+block.12 = dandelion poppy allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower wither_rose tube_coral brain_coral bubble_coral fire_coral horn_coral oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling wheat crimson_roots sunflower:half=lower twilightforest:mayapple twilightforest:twilight_oak_sapling twilightforest:canopy_sapling twilightforest:mangrove_sapling twilightforest:darkwood_sapling twilightforest:hollow_oak_sapling twilightforest:time_sapling twilightforest:transformation_sapling twilightforest:mining_sapling twilightforest:sorting_sapling twilightforest:rainbow_oak_sapling
 
 # stiff two-tall stuff (that is also a diagonal up-facing cutout)
 block.13 = sunflower:half=upper
