--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -7,7 +7,7 @@ block.1 = crimson_fungus twisting_vines_plant twisting_vines warped_fungus cobwe
 block.2 = weeping_vines_plant weeping_vines hanging_roots cave_vines:berries=false cave_vines_plant:berries=false spore_blossom
 
 # light-emitting blocks referenced from https://minecraft.fandom.com/wiki/Light
-block.3 = beacon conduit:waterlogged=true end_gateway end_portal fire glowstone pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor:charges=4,3,2,1 sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_fire soul_lantern ender_chest glow_lichen amethyst_cluster:facing=north,south,east,west large_amethyst_bud:facing=north,south,east,west medium_amethyst_bud:facing=north,south,east,west small_amethyst_bud:facing=north,south,east,west brewing_stand dragon_egg end_portal_frame:eye=true twilightforest:firefly twilightforest:moonworm
+block.3 = beacon conduit:waterlogged=true end_gateway end_portal glowstone pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor:charges=4,3,2,1 sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_lantern ender_chest glow_lichen amethyst_cluster:facing=north,south,east,west large_amethyst_bud:facing=north,south,east,west medium_amethyst_bud:facing=north,south,east,west small_amethyst_bud:facing=north,south,east,west brewing_stand dragon_egg end_portal_frame:eye=true twilightforest:firefly twilightforest:moonworm
 
 # up-facing glowing
 block.4 = brown_mushroom amethyst_cluster:facing=up large_amethyst_bud:facing=up medium_amethyst_bud:facing=up small_amethyst_bud:facing=up redstone_wire:power=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
@@ -51,3 +51,6 @@ block.16 = water flowing_water
 
 #lava
 block.17 = lava flowing_lava
+
+# glowing wavy cutouts
+block.18 = fire:east=false:north=false:south=false:west=false soul_fire:east=false:north=false:south=false:west=false
