--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -70,7 +70,11 @@ blend.gbuffers_armor_glint = ONE ONE ONE ONE
 
 
 uniform.float.invisibility=clamp(smooth(if(is_invisible, 1, -0.1), 0.5, 2), 0, 1)
-
+variable.float.skyBrightness=skyColor.r
+variable.float.smoothSky=smooth(skyBrightness, 0.5, 0)
+uniform.float.isLightning=clamp(skyBrightness - smoothSky - 0.1, 0, 1)
+# uniform.float.isLightning=if(skyBrightness > smoothSky + 0.1, 1, 0)
+# uniform.float.isLightning=1
 
 screen = <profile> STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED]
 
