Ice now contributes to water fog

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -46,8 +46,8 @@ block.14 = twilightforest:giant_leaves
 # stiff wavy stuff (that is not a cutout)
 block.15 = oak_leaves spruce_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves mangrove_leaves azalea_leaves flowering_azalea_leaves twilightforest:beanstalk_leaves twilightforest:thorn_leaves twilightforest:twilight_oak_leaves twilightforest:canopy_leaves twilightforest:mangrove_leaves twilightforest:time_leaves twilightforest:transformation_leaves twilightforest:mining_leaves twilightforest:sorting_leaves twilightforest:rainbow_oak_leaves
 
-# water
-block.16 = water flowing_water
+# water / water fog afffected
+block.16 = water flowing_water ice
 
 #lava
 block.17 = lava flowing_lava
