--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -89,7 +89,7 @@ screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTI
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
 screen.MISC = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES <empty> <empty> <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR <empty> <empty> WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER
     screen.RESOURCEPACK = TEX_RES TEX_RENDER
-screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE <empty> <empty> <empty> SHADOW_TRANSITION_MIXING <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED]
+screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE <empty> <empty> <empty> SHADOW_TRANSITION_MIXING <empty> <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED]
     screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP PIXELATED_SHADOWS <empty> <empty> <empty> END_WARPING
         screen.FORCED_PERSPECTIVE = FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
     screen.AUTO_ADDED = *
