Added fog weather system and overworld atmosphog

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -76,18 +76,27 @@ uniform.float.isLightning=clamp(skyBrightness - smoothSky - 0.1, 0, 1)
 # uniform.float.isLightning=if(skyBrightness > smoothSky + 0.1, 1, 0)
 # uniform.float.isLightning=1
 
+variable.float.worldDayTime=worldDay + worldTime / 24000
+uniform.float.inSky=smooth(if(eyeBrightness.y < 1, 0, 1), 10, 3)
+variable.float.inSkySmoothed=smooth(inSky, 10, 0)
+uniform.float.fogWeather=smooth(if(between(worldDayTime % (8 * pi), 6.5, 7.0), 1, 0), 70, 70) * inSkySmoothed
+
+variable.float.maxRainFogSmooth=smooth(max(rainStrength, fogWeather), 0.5, 0.5)
+variable.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
+
 screen = <profile> STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED]
 
-screen.POST_PROCESSING = CONTRAST EXPOSURE POST_SATURATION <empty> [TONEMAPPING] <empty> <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
+screen.POST_PROCESSING =  [TONEMAPPING] CONTRAST EXPOSURE POST_SATURATION <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
 screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance shadowMapResolution SHADOW_DISTORTION <empty> <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES
-screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] VANILLA_LIGHTING CUTOUT_ALIGN_STRENGTH <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> SUN_TEMP TORCH_TEMP
+screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] VANILLA_LIGHTING CUTOUT_ALIGN_STRENGTH <empty> <empty> SUN_TEMP TORCH_TEMP <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY FOG_ENABLED_USER
     screen.SSAO_BETA = AO_MODE AO_INTENSITY
     screen.SSAO = AO_MODE AO_INTENSITY AO_RADIUS <empty> <empty> <empty> AO_SAMPLES TEMPORAL_UPDATE_SPEED_AO
     screen.LIGHT_STRENGTH = DYNAMIC_EXPOSURE_LIGHTING <empty> SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
 screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTING <empty> <empty> SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS <empty> <empty> POST_TEMP VANILLA_COLORS
     screen.TONEMAPPING = USE_LUT USER_LMT_MODE USER_OUTPUT_COLORSPACE USER_GAMMA_CORRECT
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
-screen.MISC = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES <empty> <empty> <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR <empty> <empty> WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER
+screen.MISC = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE <empty> <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR <empty> <empty> [WEATHER]
+    screen.WEATHER = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER <empty> <empty> FOG_ENABLED_USER <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY
     screen.RESOURCEPACK = TEX_RES TEX_RENDER
 screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE <empty> <empty> <empty> SHADOW_TRANSITION_MIXING <empty> <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED]
     screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP PIXELATED_SHADOWS <empty> <empty> <empty> END_WARPING
