Improved underground fog behavior

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -79,7 +79,9 @@ uniform.float.isLightning=clamp(skyBrightness - smoothSky - 0.1, 0, 1)
 variable.float.worldDayTime=worldDay + worldTime / 24000
 uniform.float.inSky=smooth(if(eyeBrightness.y < 1, 0, 1), 10, 3)
 variable.float.inSkySmoothed=smooth(inSky, 10, 0)
-uniform.float.fogWeather=smooth(if(between(worldDayTime % (8 * pi), 6.5, 7.0), 1, 0), 70, 70) * inSkySmoothed
+# variable.float.inSkySmoothed=playerMood * 100
+uniform.float.fogWeather=smooth(if(between(worldDayTime % (8 * pi), 6.5, 7.0), 1, 0), 70, 70)
+uniform.float.fogWeatherSky=fogWeather * inSkySmoothed
 
 variable.float.maxRainFogSmooth=smooth(max(rainStrength, fogWeather), 0.5, 0.5)
 variable.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
