--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -77,7 +77,7 @@ uniform.float.isLightning=clamp(skyBrightness - smoothSky - 0.1, 0, 1)
 # uniform.float.isLightning=1
 
 variable.float.worldDayTime=worldDay + worldTime / 24000
-uniform.float.inSky=smooth(if(eyeBrightness.y < 1, 0, 1), 10, 3)
+uniform.float.inSky=smooth(clamp(eyeBrightness.y / 100, 0, 1), 10, 3)
 variable.float.inSkySmoothed=smooth(inSky, 10, 0)
 # variable.float.inSkySmoothed=playerMood * 100
 uniform.float.fogWeather=smooth(if(between(worldDayTime % (8 * pi), 6.5, 7.0), 1, 0), 70, 70)
