--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -72,7 +72,9 @@ blend.gbuffers_armor_glint = ONE ONE ONE ONE
 uniform.float.invisibility=clamp(smooth(if(is_invisible, 1, -0.1), 0.5, 2), 0, 1)
 variable.float.skyBrightness=skyColor.r
 variable.float.smoothSky=smooth(skyBrightness, 0.5, 0)
-uniform.float.isLightning=clamp(skyBrightness - smoothSky - 0.1, 0, 1)
+variable.float.isLightningSharp=clamp(skyBrightness - smoothSky - 0.1, 0, 1)
+uniform.float.isLightningSmooth=smooth(isLightningSharp, 0, 0.7)
+uniform.float.isLightning=isLightningSharp * 0.9 + isLightningSmooth * 0.1
 # uniform.float.isLightning=if(skyBrightness > smoothSky + 0.1, 1, 0)
 # uniform.float.isLightning=1
 
