--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -74,7 +74,7 @@ variable.float.skyBrightness=skyColor.r
 variable.float.smoothSky=smooth(skyBrightness, 0.5, 0)
 variable.float.isLightningSharp=clamp(skyBrightness - smoothSky - 0.1, 0, 1)
 uniform.float.isLightningSmooth=smooth(isLightningSharp, 0, 0.7)
-uniform.float.isLightning=isLightningSharp * 0.9 + isLightningSmooth * 0.1
+# uniform.float.isLightning=isLightningSharp * 0.9 + isLightningSmooth * 0.1
 # uniform.float.isLightning=if(skyBrightness > smoothSky + 0.1, 1, 0)
 # uniform.float.isLightning=1
 
@@ -86,7 +86,7 @@ uniform.float.fogWeather=smooth(if(between(worldDayTime % (8 * pi), 6.5, 7.0), 1
 uniform.float.fogWeatherSky=fogWeather * inSkySmoothed
 
 variable.float.maxRainFogSmooth=smooth(max(rainStrength, fogWeather), 0.5, 0.5)
-variable.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
+uniform.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
 
 screen = <profile> STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED]
 
