Removed accidental debug code

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -88,8 +88,8 @@ uniform.float.fogWeather=smooth(if(between(worldDayTime % (8 * pi), 6.5, 7.0), 1
 uniform.float.fogWeatherSky=fogWeather * inSkySmoothed
 
 variable.float.maxRainFogSmooth=smooth(max(rainStrength, fogWeather), 0.5, 0.5)
-# uniform.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
-uniform.float.directLightMult=if(hasCeiling, 0, 1)
+uniform.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
+# uniform.float.directLightMult=if(hasCeiling, 0, 1)
 
 screen = <profile> STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED]
 
