--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -76,7 +76,7 @@ variable.float.skyBrightness=skyColor.r
 variable.float.smoothSky=smooth(skyBrightness, 0.5, 0)
 variable.float.isLightningSharp=clamp(skyBrightness - smoothSky - 0.1, 0, 1)
 uniform.float.isLightningSmooth=smooth(isLightningSharp, 0, 0.7)
-# uniform.float.isLightning=isLightningSharp * 0.9 + isLightningSmooth * 0.1
+uniform.float.isLightning=isLightningSharp * 0.9 + isLightningSmooth * 0.1
 # uniform.float.isLightning=if(skyBrightness > smoothSky + 0.1, 1, 0)
 # uniform.float.isLightning=1
 
