Added proper snow handling for rain transparency

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -80,6 +80,8 @@ uniform.float.isLightning=isLightningSharp * 0.9 + isLightningSmooth * 0.1
 # uniform.float.isLightning=if(skyBrightness > smoothSky + 0.1, 1, 0)
 # uniform.float.isLightning=1
 
+uniform.float.rainWind=smooth(if(in(biome_precipitation, 2), 0, 1), 4, 4)
+
 variable.float.worldDayTime=worldDay + worldTime / 24000
 uniform.float.inSky=smooth(clamp(eyeBrightness.y / 100, 0, 1), 10, 3)
 variable.float.inSkySmoothed=smooth(inSky, 10, 0)
