Fixed invisibility effect in water

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -131,3 +131,4 @@ flip.shadowcomp1.colortex1=true
 flip.deferred.colortex0=false
 program.shadowcomp.enabled=SHADOWS_ENABLED_USER
 program.composite.enabled=SHADOWS_ENABLED_USER
+programp.composite1.enabled=GI_FAST
