Removed blockstates for soul fire

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -53,4 +53,4 @@ block.16 = water flowing_water
 block.17 = lava flowing_lava
 
 # glowing wavy cutouts
-block.18 = fire:east=false:north=false:south=false:west=false soul_fire:east=false:north=false:south=false:west=false
+block.18 = fire:east=false:north=false:south=false:west=false soul_fire
