Lighting now syncs to moon phase properly

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -72,6 +72,11 @@ variable.float.isInvisible=if(is_invisible, 1, -0.1)
 variable.float.isNotSpectator=smooth(if(isSpectator, 0, 1), 2, 0)
 uniform.float.invisibility=clamp(smooth(isInvisible * isNotSpectator, 2, 2), 0, 1)
 
+# 2 * PI / 8 evaluates to 0.785398163397
+uniform.float.moonBrightness=cos(moonPhase * 0.785398163397) * 0.3 + 0.7
+# uniform.float.moonBrightness=0
+# uniform.float.moonBrightness=
+
 variable.float.skyBrightness=skyColor.r
 variable.float.smoothSky=smooth(skyBrightness, 0.5, 0)
 variable.float.isLightningSharp=clamp(skyBrightness - smoothSky - 0.1, 0, 1)
