--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -95,7 +95,7 @@ screen.MISC = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE <empt
         screen.DIMENSION_WEATHER = OVERWORLD_FOGGY_WEATHER NETHER_FOGGY_WEATHER END_FOGGY_WEATHER
         screen.DIMENSION_WEATHER.columns = 1
     screen.RESOURCEPACK = TEX_RES TEX_RENDER
-screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE <empty> <empty> <empty> SHADOW_TRANSITION_MIXING END_SKY_RESOLUTION NO_WAVING_FULL_BLOCKS HDR_TEX_LIGHT_BRIGHTNESS <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED]
+screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE WATER_FOG <empty> <empty> SHADOW_TRANSITION_MIXING END_SKY_RESOLUTION NO_WAVING_FULL_BLOCKS HDR_TEX_LIGHT_BRIGHTNESS <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED]
     screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP PIXELATED_SHADOWS VANILLA_SHADOWS <empty> <empty> END_WARPING FAST_GI
         screen.FORCED_PERSPECTIVE = FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
     screen.AUTO_ADDED = *
