--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -85,16 +85,20 @@ screen.POST_PROCESSING =  [TONEMAPPING] CONTRAST EXPOSURE POST_SATURATION <empty
 screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES
 screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] VANILLA_LIGHTING CUTOUT_ALIGN_STRENGTH <empty> <empty> SUN_TEMP TORCH_TEMP <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY FOG_ENABLED_USER
     screen.SSAO_BETA = AO_MODE AO_INTENSITY
+    screen.SSAO_BETA.columns = 1
     screen.SSAO = AO_MODE AO_INTENSITY AO_RADIUS <empty> <empty> <empty> AO_SAMPLES TEMPORAL_UPDATE_SPEED_AO
     screen.LIGHT_STRENGTH = DYNAMIC_EXPOSURE_LIGHTING <empty> SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
 screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTING <empty> <empty> SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS <empty> <empty> POST_TEMP
     screen.TONEMAPPING = USE_LUT USER_LMT_MODE USER_OUTPUT_COLORSPACE USER_GAMMA_CORRECT
+    screen.TONEMAPPING.columns = 1
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
+        screen.NIGHT_EFFECT.columns = 1
 screen.MISC = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE <empty> <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR <empty> <empty> [WEATHER] WATER_STYLE
     screen.WEATHER = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER <empty> <empty> NOISY_RAIN RAIN_THICKNESS RAIN_AMOUNT_USER RAIN_TRANSPARENCY <empty> <empty> FOG_ENABLED_USER [DIMENSION_WEATHER] ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY
         screen.DIMENSION_WEATHER = OVERWORLD_FOGGY_WEATHER NETHER_FOGGY_WEATHER END_FOGGY_WEATHER
         screen.DIMENSION_WEATHER.columns = 1
     screen.RESOURCEPACK = TEX_RES TEX_RENDER
+    screen.RESOURCEPACK.columns = 1
 screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE WATER_FOG <empty> <empty> SHADOW_TRANSITION_MIXING END_SKY_RESOLUTION NO_WAVING_FULL_BLOCKS HDR_TEX_LIGHT_BRIGHTNESS <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED]
     screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP PIXELATED_SHADOWS VANILLA_SHADOWS <empty> <empty> END_WARPING FAST_GI
         screen.FORCED_PERSPECTIVE = FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
