Added (unused) iris 1.6 gbuffers

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -25,7 +25,9 @@ shadowEntities=true
 shadowBlockEntities=true
 
 particles.before.deferred=false
+particles.ordering=after
 
+separateEntityDraws=false
 
 alphaTest.gbuffers_skytextured=LEQUAL 0.001
 
