--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -78,6 +78,8 @@ variable.float.maxRainFogSmooth=smooth(max(rainStrength, fogWeather), 0.5, 0.5)
 uniform.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
 # uniform.float.directLightMult=if(hasCeiling, 0, 1)
 
+uniform.float.eyeBrightnessSmoothFloat=smooth(if(playerMood < 0.1, 1, 0), 40, 40)
+
 screen = <profile> STREAMER_MODE LIGHTNING_FLASHES WATER_STYLE <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED]
 
 screen.POST_PROCESSING =  [TONEMAPPING] CONTRAST EXPOSURE POST_SATURATION <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
